- Implemented `GCWCalendarAuthorization` and `GCWCalendarAuthorizationManager` and moved authorisation logic from `GCWCalendar` to the new classes. - Implemented `CalendarWrapperTests` using `OHHTTPStubs` and `Nimble`. - Implemented `MockCalendarAuthorization` and `MockCalendarAuthorizationManager` for testing purposes. - Added test fixtures `calendar_list.json` and `calendar_events.json`.

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,8 +5,10 @@ target 'CalendarWrapper_Example' do
 
   target 'CalendarWrapper_Tests' do
     inherit! :search_paths
+    use_frameworks!
 
-    
+    pod 'OHHTTPStubs', '~> 9.0.0'
+    pod 'Nimble'
   end
 end
 
