--- a/Example/CalendarWrapper.xcodeproj/xcshareddata/xcschemes/CalendarWrapper-Example.xcscheme
+++ b/Example/CalendarWrapper.xcodeproj/xcshareddata/xcschemes/CalendarWrapper-Example.xcscheme
@@ -27,6 +27,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "6003F589195388D20070C39A"
+            BuildableName = "CalendarWrapper_Example.app"
+            BlueprintName = "CalendarWrapper_Example"
+            ReferencedContainer = "container:CalendarWrapper.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -37,19 +46,13 @@
                BlueprintName = "CalendarWrapper_Tests"
                ReferencedContainer = "container:CalendarWrapper.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "CalendarTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "CalendarWrapper_Example.app"
-            BlueprintName = "CalendarWrapper_Example"
-            ReferencedContainer = "container:CalendarWrapper.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -71,8 +74,6 @@
             ReferencedContainer = "container:CalendarWrapper.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
