- Set version to 0.5.9

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,7 @@
 platform :ios, '13.0'
 
+install! 'cocoapods', :warn_for_unused_master_specs_repo => false
+
 target 'CalendarWrapper_Example' do
   pod 'CalendarWrapper', :path => '../'
 
