--- a/Example/Podfile
+++ b/Example/Podfile
@@ -9,8 +9,8 @@ target 'CalendarWrapper_Example' do
     inherit! :search_paths
     use_frameworks!
 
-    pod 'OHHTTPStubs', '~> 9.0.0'
-    pod 'Nimble'
+    pod 'OHHTTPStubs', '~> 9.1.0'
+    pod 'Nimble', '~> 9.2.1'
   end
 end
 
